# Regress

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  README.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.txt  docker-compose.yml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
assets/: regress_pipeline_v1.json
db_version/: Cargo.toml
db_version/src/: main.rs
docker/: Dockerfile.text-extraction
docs/: DATA_FLOW.md  PROJECT_DOC_DE.md  azure-openai-debugging.md  frontend-runtime-config.md  pipeline-api.md  sharepoint-automation-defaults.md  structurizr.dsl
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend-history/: index.html  script.js
frontend/cypress/e2e/: upload.cy.ts
frontend/src/: App.tsx  ColorModeContext.tsx  index.css  main.tsx  theme.ts
frontend/src/components/: DocumentPreview.tsx  DropZone.tsx  EdgeConditionPopover.tsx  EdgeEditPanel.tsx  FinalPromptInfo.tsx  GenericResultTable.tsx  Layout.tsx  NodeCreationDialog.tsx  NodeEditPanel.tsx  PageHeader.tsx  PdfViewer.tsx  PipelineEditor.tsx  PipelineLinearView.tsx  PromptDetailsTable.tsx  PromptHistoryDrawer.tsx  PromptNode.tsx  RunDetails.tsx  ScoringWeightsCard.tsx  Sidebar.tsx  StageScorePanel.tsx  TenantFilter.tsx  numberWithDepth.test.ts
frontend/src/components/PipelineEditor/: BranchHeader.tsx  (+3 more)
frontend/src/context/: LatestRun.tsx  PromptNotifications.tsx
frontend/src/hooks/: useAnalysisHistory.ts  useAutoConnect.ts  useBranchLayout.test.ts  useBranchLayout.ts  useLinearIndentLayout.ts  useMetrics.ts  usePipelineList.ts  usePipelineStore.ts  useRunDetails.ts  useSimulation.ts  useTenants.ts  useUploadStore.ts
frontend/src/pages/: Analyses.tsx  Analysis.tsx  AnalysisHistory.tsx  BatchAnalysis.tsx  Dashboard.tsx  Help.tsx  History.tsx  Pipeline.stories.tsx  Pipeline.tsx  PipelineEditor.tsx  PipelineList.tsx  PromptAnalysis.tsx  Prompts.tsx  Result.stories.tsx  Result.tsx  RunDetailsPage.tsx  Settings.tsx  SharePointIngest.tsx  SharePointUpload.tsx  TenantsPage.tsx  Upload.tsx
frontend/src/store/: usePipelineStore.ts
frontend/src/styles/: pipeline.css  route-colors.css
frontend/src/types/: PipelineGraph.ts  Port.ts  ingest.ts  pipeline.ts
frontend/src/utils/: api.ts  defaultIngestUrl.ts  enrichRunLog.ts  enrichSteps.test.ts  enrichSteps.ts  graph.ts  ingestApi.test.ts  ingestApi.ts  layout.ts  normalizeIngestBase.test.ts  normalizeIngestBase.ts  numberWithDepth.ts  openai.ts  promptGroups.ts  runtimeEnv.ts  uuid.ts
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml  service.yaml
migrations/: 0000_cleanup.sql  0000z1_prompts.sql  0000z2_prompt_groups.sql  0000z3_group_prompts.sql  0001_core.sql  0002_runs.sql  0003_indexes.sql  0004_history_fix.sql  0005_history_id_int.sql  0006_tenants.sql  0007_uploads_default_tenant.sql  0008_pdf_names_in_views.sql  0009_pdf_texts_ocr_layout.sql  0010_sharepoint_jobs.sql  0011_sharepoint_ingest_cleanup.sql  0012_sharepoint_automation_ingest_reset.sql  20250727_create_pipelines.sql  20250727_create_pipelines_down.sql  20250727_create_pipelines_up.sql  20250801_adjust_history_and_uploads.sql  20250804_run_tracking.sql  20250804_run_tracking_down.sql  20250804_run_tracking_up.sql  20250805_create_prompt_results_up.sql  20250811_add_merge_key_to_run_steps.sql  20250812_add_merge_key_column.sql  20250903_alter_pdf_texts_to_pagewise.sql  20250903_create_merged_pdfs.sql  20250909_add_final_consolidation_columns_up.sql  20251017_create_uploads_table.sql  20251017_create_uploads_table_down.sql  20251017_create_uploads_table_up.sql  20251018_add_json_key_and_cleanup.sql  20251019_update_prompt_results.sql  20251020_add_recipient_id_to_jamiah_cycles.sql  20251020_drop_merge_key_column.sql  20251020_finalize_steps_model.sql  20251025_add_run_status.sql  Dockerfile  run.sh
migrations/migrations-image/: Dockerfile  run.sh
services/api-gateway/: Cargo.toml  Dockerfile
services/api-gateway/src/: main.rs
services/classifier/: Cargo.toml  Dockerfile
services/classifier/src/: main.rs
services/history-service/: Cargo.toml  Dockerfile  README.md  config.example.json  package.json
services/history-service/src/: db.js  kafka.js  main.rs  server.js  websocket.js
services/metrics/: Cargo.toml  Dockerfile
services/metrics/src/: main.rs
services/migrator/: Dockerfile
services/pdf-ingest/: Cargo.toml  Dockerfile
services/pdf-ingest/src/: main.rs
services/pipeline-api/: Cargo.toml  Dockerfile  consolidation.rs
services/pipeline-api/.sqlx/: query-43acf8c9d13db823c1f8d7c8d8f27d7d209153d4d59180e9dfbe1c21a9255f26.json  query-5c01384a13ef8fee15e9ad2f849b47ff8d39fe94d435d4b3fb63d18f4b111505.json
services/pipeline-api/src/: consolidation.rs  main.rs
services/pipeline-engine/: Cargo.toml  Dockerfile
services/pipeline-engine/src/: main.rs
services/pipeline-manager/: Cargo.toml  Dockerfile
services/pipeline-manager/src/: main.rs  model.rs
services/pipeline-runner/: Cargo.toml  Dockerfile
services/pipeline-runner/src/: builder.rs  json_relaxed.rs  main.rs  runner.rs
services/pipeline-runner/tests/: openai.rs  runner_branch_merge.rs
services/prompt-manager/: Cargo.toml  Dockerfile
services/prompt-manager/src/: main.rs  model.rs  review.rs
services/sharepoint-ingest/: Cargo.toml  Dockerfile  README.md
services/sharepoint-ingest/examples/: http.http
services/sharepoint-ingest/src/: config.rs  job.rs  main.rs  msgraph.rs  pdfops.rs  pipeline_adapter.rs  scan.rs  upload_adapter.rs
services/text-extraction/: Cargo.toml  Dockerfile
services/text-extraction/src/: lib.rs  main.rs
services/text-extraction/tests/: ocr.rs  ocr_sample.b64
services/upload-api/: Cargo.toml
services/upload-api/src/: main.rs
shared/: Cargo.toml
shared/src/: config.rs  db.rs  dto.rs  error.rs  evidence_resolver.rs  kafka.rs  lib.rs  openai_client.rs  openai_executor.rs  openai_settings.rs  pipeline.rs  pipeline_executor.rs  pipeline_graph.rs  utils.rs
shared/tests/: openai_endpoints.rs
(+9 files in other folders)
