[workspace]
members = [
    "shared",
    "services/api-gateway",
    "services/pdf-ingest",
    "services/text-extraction",
    "services/prompt-manager",
    "services/classifier",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Karim Rakia <karim.rakia@adesso.de>"]
license = "MIT"

[workspace.dependencies]
serde       = { version = "1.0.219", features = ["derive"] }
serde_json  = "1.0.140"
config      = "0.15.11"
thiserror   = "2.0.12"
tracing     = "0.1.41"
tracing-subscriber = "0.3.18"
async-trait = "0.1.88"
bindgen     = "=0.72.0"
tokio       = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7"
rdkafka     = { version = "0.36", features = ["tokio"] }

[workspace.metadata.vcpkg]
git          = "https://github.com/microsoft/vcpkg"
dependencies = ["leptonica", "tesseract"]
triplet      = "x64-windows-static-md"
