[workspace]
members = [
    "shared",
    "services/api-gateway",
    "services/pdf-ingest",
    "services/text-extraction",
    "services/prompt-manager",
    "services/history-service",
    "services/metrics",
    "services/pipeline-runner",
    "services/pipeline-api",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Karim Rakia <karim.rakia@adesso.de>"]
license = "MIT"

[workspace.dependencies]
serde       = { version = "1.0.219", features = ["derive"] }
serde_json  = "1.0.140"
config      = "0.15.11"
thiserror   = "2.0.12"
tracing     = "0.1.41"
tracing-subscriber = "0.3.18"
async-trait = "0.1.88"
bindgen     = "=0.72.0"
tokio       = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
rdkafka     = { version = "0.36", features = ["tokio"] }
openai      = "1"
anyhow      = "1"
log         = "0.4"
postgres-native-tls = "0.5"
native-tls = "0.2"
rhai        = "1"

[workspace.metadata.vcpkg]
git          = "https://github.com/microsoft/vcpkg"
dependencies = ["leptonica", "tesseract"]
triplet      = "x64-windows-static-md"
