[package]
name = "shared"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
config.workspace = true
thiserror.workspace = true
tracing.workspace = true
awc = "3"
openai.workspace = true
actix-web = "4"
rhai = { workspace = true }
anyhow = { workspace = true }
uuid = { version = "1", features=["serde", "v4"] }
jsonrepair = { package = "json-repair", version = "0.3.0" }
