[package]
name = "shared"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
config.workspace = true
thiserror.workspace = true
tracing.workspace = true
awc = { version = "3", features = ["rustls"] }
openai.workspace = true
actix-web = "4"
rhai = { workspace = true }
anyhow = { workspace = true }
uuid = { version = "1", features=["serde", "v4"] }
tokio = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
