[package]
name = "shared"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
config.workspace = true
thiserror.workspace = true
tracing.workspace = true
openai.workspace = true
rhai = { workspace = true }
anyhow = { workspace = true }
uuid = { version = "1", features=["serde", "v4"] }
tokio = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio-postgres.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rdkafka.workspace = true
sqlx = "0.7.4"
once_cell = "1"

[dev-dependencies]
openai.workspace = true
httpmock = "0.7"
serial_test = "3.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
