[package]
name = "api-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
actix-web = "4"
actix-cors = "0.6"
futures-util = "0.3"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
shared = { path = "../../shared" }
awc = "3"

[dev-dependencies]
actix-rt = "2"
