[package]
name = "classifier"
version.workspace = true
edition.workspace = true

[dependencies]
actix-web = "4"
actix-multipart = "0.4"
futures-util = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-postgres.workspace = true
serde_json.workspace = true
chrono = { version = "0.4", features = ["serde"] }
shared = { path = "../../shared" }
