[package]
name = "classifier"
version.workspace = true
edition.workspace = true

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-postgres.workspace = true
serde_json.workspace = true
shared = { path = "../../shared" }
openai.workspace = true
rdkafka.workspace = true
actix-cors = "0.6"
awc = { version = "3", features = ["rustls"] }
anyhow.workspace = true
log = "0.4"
