[package]
name = "classifier"
version.workspace = true
edition.workspace = true

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
shared = { path = "../../shared" }
actix-cors = "0.6"
