[package]
name = "history-service"
version.workspace = true
edition.workspace = true

[dependencies]
actix-web = "4"
actix-web-actors = "4"
actix-cors = "0.6"
actix = "0.13"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
rdkafka.workspace = true
postgres-native-tls.workspace = true
native-tls.workspace = true
shared = { path = "../../shared" }
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = { version = "1", features = ["serde", "v4"] }
url = "2.5.4"
