[package]
name = "metrics-service"
version.workspace = true
edition.workspace = true

[dependencies]
actix-web = "4"
actix-cors = "0.6"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-postgres.workspace = true
shared = { path = "../../shared" }
chrono = { version = "0.4", features = ["serde"] }
