[package]
name = "pdf-ingest"
version.workspace = true
edition.workspace = true

[dependencies]
actix-web = "4"
actix-multipart = "0.6"
futures-util = "0.3"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
shared = { path = "../../shared" }
