[package]
name = "pdf-ingest"
version.workspace = true
edition.workspace = true

[dependencies]
actix-web = "4"
actix-multipart = "0.6"
futures-util = "0.3"
actix-cors = "0.6"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
shared = { path = "../../shared" }
tokio.workspace = true
tokio-postgres.workspace = true
rdkafka.workspace = true
lopdf = "0.36"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
tempfile = "3"
postgres-native-tls.workspace = true
native-tls.workspace = true
uuid = "1"
