[package]
name = "pipeline-api"
version.workspace = true
edition.workspace = true

[dependencies]
actix-web = "4"
actix-cors = "0.6"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "uuid"] }
shared = { path = "../../shared" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["serde", "v4"] }
