[package]
name = "pipeline-runner"
version.workspace = true
edition.workspace = true

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
shared = { path = "../../shared" }
actix-cors = "0.6"
tokio-postgres.workspace = true
postgres-native-tls.workspace = true
native-tls.workspace = true
chrono = { version = "0.4", features = ["serde"] }
awc = "3"
rdkafka = { version = "0.36", features = ["tokio"] }
