[package]
name = "pipeline-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rdkafka = { version = "0.36", features = ["tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
rhai = { workspace = true }
anyhow = "1"
openai = { workspace = true }
uuid = "1"
shared = { path = "../../shared" }
futures = "0.3.31"

[dev-dependencies]
wiremock = "0.6"
