[package]
name = "prompt-manager"
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
shared = { path = "../../shared" }
