[package]
name = "prompt-manager"
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tower-http = { version = "0.4", features = ["cors"] }
tower = "0.4"
strum.workspace = true
strum_macros.workspace = true
shared = { path = "../../shared" }
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
openai.workspace = true
thiserror.workspace = true

[dependencies.sea-orm]
version = "0.12"
features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "with-uuid",
    "with-json",
    "with-rust_decimal",
    "mock",
]

[dependencies.uuid]
version = "1.17.0"
features = ["v4", "serde"]
