[package]
name = "sharepoint-ingest"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["macros"] }
actix-cors = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "sync", "time"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "stream", "gzip", "brotli", "deflate", "rustls-tls"] }
lopdf = "0.38"
infer = "0.15"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
urlencoding = "2"
chrono = { version = "0.4", features = ["serde", "clock"] }
tempfile = "3"
rand = "0.8"
