[package.metadata.vcpkg]
git          = "https://github.com/microsoft/vcpkg"
branch       = "master"
dependencies = ["leptonica", "tesseract"]
triplet      = "x64-windows-static-md"

[package]
name             = "text-extraction"
version.workspace = true
edition.workspace = true

[lib]
name = "text_extraction"
path = "src/lib.rs"

[dependencies]
tesseract        = "0.15.2"
pdf-extract      = "0.9"
actix-web        = "4"
actix-cors       = "0.6"
serde.workspace  = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
shared           = { path = "../../shared" }
tokio.workspace = true
tokio-postgres.workspace = true
rdkafka.workspace = true
postgres-native-tls.workspace = true
native-tls.workspace = true
anyhow = { workspace = true }
