[package]
name             = "text-extraction"
version.workspace = true
edition.workspace = true

[lib]
name = "text_extraction"
path = "src/lib.rs"

[dependencies]
deadpool-postgres = "0.10"
# tokio-postgres wird bereits im Workspace genutzt; falls nicht, einkommentieren:
# tokio-postgres = "0.7"

actix-web        = "4"
actix-cors       = "0.6"
serde.workspace  = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
shared           = { path = "../../shared" }
tokio.workspace = true
tokio-postgres.workspace = true
rdkafka.workspace = true
anyhow = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
url = "2"
html-escape = "0.2"
once_cell = "1.19"
quick-xml = "0.31"
regex = "1"

[dev-dependencies]
base64 = "0.21"
